trunk/Archive2/56/2cfbc960d7b138/output
main.cpp: In function 'int main()':
main.cpp:11:47: error: no matching function for call to 'minmax(std::vector<int>&)'
     std::pair<int, int> bounds = std::minmax(v);
                                               ^
main.cpp:11:47: note: candidates are:
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4062:5: note: template<class _Tp> std::pair<const _Tp&, const _Tp&> std::minmax(const _Tp&, const _Tp&)
     minmax(const _Tp& __a, const _Tp& __b)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4062:5: note:   template argument deduction/substitution failed:
main.cpp:11:47: note:   candidate expects 2 arguments, 1 provided
     std::pair<int, int> bounds = std::minmax(v);
                                               ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4082:5: note: template<class _Tp, class _Compare> std::pair<const _Tp&, const _Tp&> std::minmax(const _Tp&, const _Tp&, _Compare)
     minmax(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4082:5: note:   template argument deduction/substitution failed:
main.cpp:11:47: note:   candidate expects 3 arguments, 1 provided
     std::pair<int, int> bounds = std::minmax(v);
                                               ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4264:5: note: template<class _Tp> std::pair<_FIter, _FIter> std::minmax(std::initializer_list<_Tp>)
     minmax(initializer_list<_Tp> __l)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4264:5: note:   template argument deduction/substitution failed:
main.cpp:11:47: note:   'std::vector<int>' is not derived from 'std::initializer_list<_Tp>'
     std::pair<int, int> bounds = std::minmax(v);
                                               ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4273:5: note: template<class _Tp, class _Compare> std::pair<_FIter, _FIter> std::minmax(std::initializer_list<_Tp>, _Compare)
     minmax(initializer_list<_Tp> __l, _Compare __comp)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4273:5: note:   template argument deduction/substitution failed:
main.cpp:11:47: note:   'std::vector<int>' is not derived from 'std::initializer_list<_Tp>'
     std::pair<int, int> bounds = std::minmax(v);
                                               ^
